k8s/oc_wan/cluster/wan1-netpol.yaml
# A template for a NetworkPolicy that matches any pods labelled role=hazelcast-wan
# inside the wan1 project and allows them to communicate out to any projects
# labelled hazelcast="true"
apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
  name: hazelcast-wan1
  namespace: wan1
spec:
  podSelector:
    matchLabels:
      role: hazelcast
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          hazelcast: "true"
