k8s/oc_wan/cluster/wan2-netpol.yaml
# A template for a NetworkPolicy that matches any pods labelled role=hazelcast
# inside the wan2 project and allows them to communicate out to any projects
# labelled hazelcast="true"
apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
  name: hazelcast-wan2
  namespace: wan2
spec:
  podSelector:
    matchLabels:
      role: hazelcast
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          hazelcast: "true"
